# circular_harmonics_article

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  serve.py
article/: ch.css  ch.md  ch_template.html
article/images/: ch_box.webm  ch_composition.webm  ch_composition_sub.webm  ch_fourier_both.webm  ch_rot.webm  ch_rot_scale.webm  sh_terms.webm
src/: circ_harmonics.rs  main.rs  spherical_harmonics.rs
