[package]
name = "circular_harmonics"
version = "0.1.0"
authors = ["Jon Valdés <jon@valdes.cc>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25.0"
nannou = "0.17.1"
factorial = "0.2.1"

[patch.crates-io.wgpu]
git = "https://github.com/mitchmindtree/wgpu-rs"
branch = "0.8-as-0.9"
